完成商品上架除了ＤＢ